<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotspy</name>
  <version>0.1.4</version>
  <description>RTI Connext DDS utilities to inspect a robotic system based on ROS 2</description>
  <maintainer email="asorbini@rti.com">Andrea Sorbini</maintainer>
  <license>RTI Community License Agreement</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rcpputils</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_cli</depend>
  <depend>ament_index_cpp</depend>
  <depend>rtiddsgen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
